# python-rennes-bicyclettes

./: .flake8  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
bicyclettes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bicyclettes/migrations/: 0001_initial.py
bicyclettes/templates/bicyclettes/: bicyclette_detail.html  bicyclette_form.html
discover_django/: asgi.py  settings.py  urls.py  wsgi.py
main/: apps.py  views.py
main/templates/main/: __base.html  accueil.html
