[tool.poetry]
name = "discover-django"
version = "0.1.0"
description = ""
authors = ["Quentin CARON <quentin.caron@external.grtgaz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
crispy-bootstrap5 = "^2024.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pylint = "^3.2.6"
pylint-django = "^2.5.5"
pylint-per-file-ignores = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
django-settings-module = "discover_django.settings"
max-line-length = 120
disable = ["R0903", "R0901"]  # Disable 'Too few public methods', 'Too many ancestors'
load-plugins = ["pylint_per_file_ignores", "pylint_django"]
per-file-ignores = """
    /tests/:missing-function-docstring,assignment-from-no-return,not-context-manager,django-not-configured,imported-auth-user,missing-module-docstring
    /migrations/:invalid-name,missing-class-docstring,wrong-import-order
    models.py:too-many-ancestors
    manage.py:import-outside-toplevel
"""

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = [
    "./",
]
exclude=[]
sort_by_size = true
verbose = false
